Added alerts dashboard item

--- a/client/app/components/dashboard/service-overview/service-overview.html
+++ b/client/app/components/dashboard/service-overview/service-overview.html
@@ -2,7 +2,7 @@
   <md-tabs class="md-accent" md-selected="data.selectedIndex">
     <md-tab id="tab1" tabindex="1">
       <md-tab-label>Services Overview</md-tab-label>
-      <md-tab-template>
+      <md-tab-template class="md-primary">
             <div layout="row" layout-sm="column" layout-wrap>
               <div style="width: 300px">
                 <md-card >
@@ -34,7 +34,7 @@
               </div>
               <div style="width: 300px">
                 <md-card>
-                  <md-toolbar class="md-primary">
+                  <md-toolbar class="md-accent">
                     <div class="md-toolbar-tools">
                       <h2 class="md-flex">User Services</h2>
                       <span flex></span>
