--- a/client/assets/stylesheets/shared/base.css
+++ b/client/assets/stylesheets/shared/base.css
@@ -195,3 +195,10 @@ textarea::-webkit-input-placeholder {
 [ng-cloak] {
   display: none;
 }
+
+.warning-alert {
+  color: #f6a828;
+}
+.error-alert {
+  color: #aa0000;
+}
