renaming for consistency

--- a/client/app/components/dashboard/Alerts/alerts.html
+++ b/client/app/components/dashboard/Alerts/alerts.html
@@ -25,6 +25,8 @@
                      ng-show="alert.type==='error'"></md-icon>
             <md-icon md-svg-icon="assets/img/icons/ic_warning_24px.svg" style="color:darkorange"
                      ng-show="alert.type==='warning'"></md-icon>
+            <md-icon md-svg-icon="assets/img/icons/ic_info_24px.svg" style="color:#003cb3;background-color: white"
+                     ng-show="alert.type==='info'"></md-icon>
             <strong>{{alert.ts}}</strong> {{alert.description}}
               </span>
           </md-list-item>
