--- a/client/app/components/dashboard/alerts/alerts.html
+++ b/client/app/components/dashboard/alerts/alerts.html
@@ -17,15 +17,15 @@
           <input ng-model="displayControl.filter">
         </md-input-container>
       </md-content>
-      <md-content md-theme="docs-dark" layout-padding layout="row" layout-sm="column">
+      <md-content layout-padding layout="column">
         <md-list style="max-height: 300px">
           <md-list-item layout="row" layout-align="start center" ng-repeat="alert in alerts | filter:{description: displayControl.filter}">
-            <span class="light-text">
+            <span ng-class-odd="'light-text-odd'" ng-class-even="'light-text-even'" >
             <md-icon md-svg-icon="assets/img/icons/ic_error_24px.svg" style="color:red"
                      ng-show="alert.type==='error'"></md-icon>
             <md-icon md-svg-icon="assets/img/icons/ic_warning_24px.svg" style="color:darkorange"
                      ng-show="alert.type==='warning'"></md-icon>
-            <md-icon md-svg-icon="assets/img/icons/ic_info_24px.svg" style="color:#003cb3;background-color: white"
+            <md-icon md-svg-icon="assets/img/icons/ic_info_24px.svg" style="color:#003cb3;"
                      ng-show="alert.type==='info'"></md-icon>
             <strong>{{alert.ts}}</strong> {{alert.description}}
               </span>
