side nav full screen

--- a/client/app/components/side-menu/side-menu.css
+++ b/client/app/components/side-menu/side-menu.css
@@ -1,6 +1,6 @@
-#side-menu .md-button{
-  width:100%;
-  text-transform: none;
+#side-menu button.md-button {
+  width: 100%;
+  padding-top: 20px;
 }
 
 #side-menu a span{
