--- a/client/app/components/side-menu/side-menu.template.html
+++ b/client/app/components/side-menu/side-menu.template.html
@@ -1,10 +1,10 @@
-<md-sidenav class="md-sidenav-left side-pane md-default-theme" md-is-locked-open="$mdMedia('gt-sm')"
+<md-sidenav id="side-menu" class="md-sidenav-left side-pane md-default-theme" md-is-locked-open="$mdMedia('gt-sm')"
             md-component-id="left">
   <md-toolbar>
     <h1 class="md-toolbar-tools">Dashboard </h1>
   </md-toolbar>
   <md-content flex role="navigation"  layout="row" layout-align="start start">
-    <ul id="side-menu" flex>
+    <ul flex>
       <li ng-repeat="menuItem in menuItems">
         <a
            ng-href="{{menuItem.url}}">
@@ -21,8 +21,8 @@
       </li>
     </ul>
   </md-content>
-  <md-content class="md-padding">
-    <md-button ng-click="close()" class="md-primary" hide-gt-md>
+  <md-content class="md-padding" hide-gt-sm>
+    <md-button ng-click="close()" class="md-accent md-hue-1" >
       Close
     </md-button>
   </md-content>
