--- a/client/assets/stylesheets/main.css
+++ b/client/assets/stylesheets/main.css
@@ -6,4 +6,4 @@
 @import"../../app/components/side-menu/side-menu.css";
 @import"../../app/components/dashboard/dashboard.css";
 @import 'shared/base.css';
-
+@import"../../app/components/dashboard/settings/user-settings.css";
