--- a/client/app/components/side-menu/side-menu.template.html
+++ b/client/app/components/side-menu/side-menu.template.html
@@ -1,9 +1,9 @@
-<md-sidenav id="side-menu" class="md-sidenav-left side-pane md-default-theme" md-is-locked-open="$mdMedia('gt-sm')"
+<md-sidenav id="side-menu" md-theme="default-dark" class="md-sidenav-left side-pane" md-is-locked-open="$mdMedia('gt-sm')"
             md-component-id="left">
   <md-toolbar>
     <h1 class="md-toolbar-tools">Dashboard </h1>
   </md-toolbar>
-  <md-content flex role="navigation"  layout="row" layout-align="start start">
+  <md-content flex role="navigation" class="md-hue-1"  layout="row" layout-align="start start">
     <ul flex>
       <li ng-repeat="menuItem in menuItems">
         <a
