--- a/client/app/components/dashboard/settings/settings.html
+++ b/client/app/components/dashboard/settings/settings.html
@@ -1,5 +1,5 @@
-<div>
-  <md-card >
+<div >
+  <md-card>
     <md-toolbar class="md-primary">
       <div class="md-toolbar-tools">
         <h2 class="md-flex">Current Users</h2>
@@ -8,9 +8,9 @@
     <div ng-show="loading" layout="row" layout-align="center center" layout-margin style=" height: 100px;">
       <md-progress-circular class="md-hue-2" md-mode="indeterminate"></md-progress-circular>
     </div>
-    <md-content layout-wrap  layout-gt-md="row" layout="column">
+    <md-content layout-wrap layout-gt-md="row" layout="column" class="md-hue-1">
       <md-card flex="40" ng-repeat="user in currentUsers">
-        <md-content flex class="md-hue"  layout="row">
+        <md-content flex   layout="row">
           <div>
             <img class="circle-image" ng-src="{{user.picture.thumbnail}}" class="md-avatar"/>
           </div>
@@ -20,6 +20,10 @@
               <h5 class="md-padding">Developer</h5>
             </div>
           </md-list-item>
+          <md-switch flex ng-model="user.active" class="md-primary" aria-label="Active/Disabled">
+            <label ng-show="user.active">Active</label>
+            <label ng-hide="user.active">Disabled</label>
+          </md-switch>
         </md-content>
         </md-card>
       </md-content>
