--- a/client/app/components/side-menu/side-menu.template.html
+++ b/client/app/components/side-menu/side-menu.template.html
@@ -1,4 +1,4 @@
-<md-sidenav id="side-menu" md-theme="default-dark" class="md-sidenav-left side-pane" md-is-locked-open="$mdMedia('gt-sm')"
+<md-sidenav id="side-menu" md-theme="default-dark" class="md-sidenav-left side-pane md-content md-default-dark-theme " md-is-locked-open="$mdMedia('gt-sm')"
             md-component-id="left">
   <md-toolbar>
     <h1 class="md-toolbar-tools">Dashboard </h1>
