--- a/client/app/components/dashboard/settings/settings.html
+++ b/client/app/components/dashboard/settings/settings.html
@@ -21,8 +21,8 @@
             </div>
           </md-list-item>
           <md-switch flex ng-model="user.active" class="md-primary" aria-label="Active/Disabled">
-            <label ng-show="user.active">Active</label>
-            <label ng-hide="user.active">Disabled</label>
+            <label hide-sm ng-show="user.active">Active</label>
+            <label hide-sm ng-hide="user.active">Disabled</label>
           </md-switch>
         </md-content>
         </md-card>
