--- a/client/app/components/dashboard/alerts/alerts.html
+++ b/client/app/components/dashboard/alerts/alerts.html
@@ -17,10 +17,10 @@
           </label>
         </md-switch>
       </md-content>
-      <md-content layout-padding layout="column">
+      <md-content id="events-viewer" md-theme="docs-dark"  layout-padding  layout="column">
         <md-list style="max-height: 300px">
-          <md-list-item layout="row" layout-align="start center" ng-repeat="alert in alerts | filter:{description: displayControl.filter}">
-            <span ng-class-odd="'light-text-odd'" ng-class-even="'light-text-even'" >
+          <md-list-item layout="row" layout-wrap layout-align="start center" ng-repeat="alert in alerts | filter:{description: displayControl.filter}">
+            <span  ng-class-odd="'light-text-odd'" ng-class-even="'light-text-even'" >
             <md-icon md-svg-icon="assets/img/icons/ic_error_24px.svg" style="color:red"
                      ng-show="alert.type==='error'"></md-icon>
             <md-icon md-svg-icon="assets/img/icons/ic_warning_24px.svg" style="color:darkorange"
