--- a/client/app/components/dashboard/settings/settings.html
+++ b/client/app/components/dashboard/settings/settings.html
@@ -16,7 +16,7 @@
           </div>
           <md-list-item flex class="md-2-line" layout="row" layout-align="start center">
             <div class="md-list-item-text">
-              <h4 class="md-padding">{{user.name.first + ' ' + user.name.last | uppercase}}</h4>
+              <h4 class="md-padding">{{user.name.first | uppercase}}</h4>
               <h5 class="md-padding">Developer</h5>
             </div>
           </md-list-item>
