--- a/client/app/components/side-menu/side-menu.template.html
+++ b/client/app/components/side-menu/side-menu.template.html
@@ -3,7 +3,7 @@
   <md-toolbar>
     <h1 class="md-toolbar-tools">Dashboard </h1>
   </md-toolbar>
-  <md-content flex role="navigation" class="md-hue-1"  layout="row" layout-align="start start">
+  <md-content flex role="navigation"  layout="row" layout-align="start start">
     <ul flex>
       <li ng-repeat="menuItem in menuItems">
         <a
@@ -21,7 +21,7 @@
       </li>
     </ul>
   </md-content>
-  <md-content class="md-padding" hide-gt-sm>
+  <md-content id="close" hide-gt-sm>
     <md-button ng-click="close()" class="md-accent md-hue-1" >
       Close
     </md-button>
